[package]
name = "rm3100"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7"
panic-itm = "0.4.0"
panic-halt = "0.2.0"
cortex-m-semihosting = "0.3.3"
embedded-hal = "0.2"
cortex-m-rtic = "1.0"
usb-device = "0.2.8"
usbd-serial = "0.1.1"

[dependencies.stm32f3xx-hal]
features = ["stm32f303xc", "rt"]
version = "0.9.0"